# game-social-network-ui/src/app/services/models.ts
@@ -4,6 +4,7 @@ export { AuthenticationRequest } from './models/authentication-request';
 export { AuthenticationResponse } from './models/authentication-response';
 export { CommentRequest } from './models/comment-request';
 export { CommentResponse } from './models/comment-response';
+export { LikeRequest } from './models/like-request';
 export { PageResponseCommentResponse } from './models/page-response-comment-response';
 export { PageResponsePostResponse } from './models/page-response-post-response';
 export { PostRequest } from './models/post-request';
