# game-social-network-ui/src/app/services/models/like-request.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface LikeRequest {
+  id?: number;
+  postId: number;
+}
